--- a/App/src/app/auth/register/register.page.html
+++ b/App/src/app/auth/register/register.page.html
@@ -1,13 +1,51 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+  <form [formGroup]="registrationForm">
+    <ion-item>
+      <ion-grid>
+        <ion-row class="ion-align-items-center ion-justify-content-center ion-margin-bottom">
+          <ion-label class="text">Registration Form</ion-label>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">First Name</ion-label>
+              <ion-input placeholder="First Name" formControlName="firstName"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">Last Name</ion-label>
+              <ion-input placeholder="Last Name" formControlName="lastName"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">Mobile Number</ion-label>
+              <ion-input placeholder="Mobile Number" formControlName="mobileNo"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-button expand="block" shape="round" class="button ion-padding" color="primary" (click)="register()">Register</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </form>
+  </ion-card>
 </ion-content>
+
