--- a/App/src/app/layout/pages/menu/menu.page.html
+++ b/App/src/app/layout/pages/menu/menu.page.html
@@ -22,3 +22,20 @@
     </ion-list>
   </ion-content>
 </ion-menu>
+<div id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button menu="main-content1"></ion-menu-button>
+      </ion-buttons>
+      <ion-title class="text-bold welcome-text" class="color-primary">
+        
+      </ion-title>
+      <ion-buttons slot="end">
+        <ion-button class="shadow-none" shape="round">
+          <ion-icon name="person-circle-outline" size="large"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+</div>
