--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -4,26 +4,114 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <div [ngSwitch]="currentTitle">
-    <ion-item class="mt-2" lines="none" *ngSwitchCase="'Donate'">
-      <ion-segment [(ngModel)]="activeSegment" [scrollable]="true">
-        <ion-segment-button value="latest">
-          <ion-label class="ion-text-capitalize">Latest</ion-label>
-        </ion-segment-button>
 
-        <ion-segment-button value="history">
-          <ion-label class="ion-text-capitalize">History</ion-label>
-        </ion-segment-button>
-      </ion-segment>
+<ion-content [fullscreen]="true">
+  <form [formGroup]="bloodDonateForm">
+    <ion-item>
+      <ion-grid>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">Full Name</ion-label>
+              <ion-input placeholder="Full Name" formControlName="name"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">Age</ion-label>
+              <ion-input placeholder="Age" formControlName="age"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">Blood Group</ion-label>
+              <ion-input placeholder="Blood Group" formControlName="bloodGroup"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">bloodRequireDate</ion-label>
+              <ion-input placeholder="bloodRequireDate" formControlName="bloodRequireDate"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">City</ion-label>
+              <ion-input placeholder="City" formControlName="city"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">hemoglobin</ion-label>
+              <ion-input placeholder="hemoglobin" formControlName="hemoglobin"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">illness</ion-label>
+              <ion-input placeholder="illness" formControlName="illness"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">location</ion-label>
+              <ion-input placeholder="location" formControlName="location"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating" lablePlacement="stacked">mobileNo</ion-label>
+              <ion-input placeholder="mobileNo" formControlName="mobileNo"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12" >
+            <ion-list>
+              <ion-item>
+                <ion-select aria-label="Fruit" interface="action-sheet" placeholder="Select Gender">
+                  <ion-select-option value="male">Male</ion-select-option>
+                  <ion-select-option value="female">Female</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-item  fill="outline" class="input">
+              <ion-label position="floating">state</ion-label>
+              <ion-input  placeholder="state" formControlName="state"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size="12">
+            <ion-button expand="block" shape="round" class="button ion-padding" color="primary">Submit</ion-button>
+          </ion-col>
+        </ion-row>
+       
+      </ion-grid>
     </ion-item>
-    <div [ngSwitch]="activeSegment">
-      <div *ngSwitchCase="'latest'">
-        <h1>Latest donations</h1>
-      </div>
-      <div *ngSwitchCase="'history'">
-        <h1>History</h1>
-      </div>
-    </div>
-  </div>
+  </form>
+ 
+  
 </ion-content> 
+
